2008-02-23  Ludovic Courtès  <ludo@gnu.org>

	* numbers.c (scm_make_rectangular): Rename argument to
	`real_part' and `imaginary_part' to work around Solaris 2.10
	headers which define `imaginary' as a macro.  Patch by Tim
	Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>.

2008-02-22  Ludovic Courtès  <ludo@gnu.org>

	* read.c (strncasecmp): Add declaration when
	`HAVE_DECL_STRNCASECMP' is undefined.  Fixes compilation on
	NetBSD 1.6.

	* gc.c (scm_ia64_ar_bsp)[linux]: Don't discard `const' qualifier
	of OPAQUE.

2008-02-21  Ludovic Courtès  <ludo@gnu.org>

	Fix bug #22369.

	* goops.c (scm_add_slot): Add `SCM_UNDEFINED' as last argument
	to `scm_list_n ()'.  Thanks to René Köcher
	<shirk87@googlemail.com>.

2008-02-17  Ludovic Courtès  <ludo@gnu.org>

	* script.c (scm_compile_shell_switches): Update copyright year.

2008-02-16  Ludovic Courtès  <ludo@gnu.org>

	* gc_os_dep.c: Add NetBSD/alpha support.  Patch by Greg Troxel
	<gdt@ir.bbn.com>.

2008-02-12  Ludovic Courtès  <ludo@gnu.org>

	* guile-snarf.in (tempdir): Honor `$TMPDIR'.

2008-02-11  Neil Jerram  <neil@ossau.uklinux.net>

	* numbers.c (SCM_COMPLEX_VALUE): Use GUILE_I instead of _Complex_I
	directly, and only if GUILE_I was defined by the configure step.
	(scm_log, scm_log10, scm_exp, scm_sqrt): Use SCM_COMPLEX_VALUE
	code only if SCM_COMPLEX_VALUE is defined.

2008-02-07  Ludovic Courtès  <ludo@gnu.org>

	Fix bug #21378.
	Thanks to David Diffenbaugh <davediff@nbcs.rutgers.edu>.

	* read.c (scm_read_quote): Don't use `__FUNCTION__' since it is
	not supported by Sun CC on Solaris 9.
	(scm_read_keyword): Likewise.
	* strings.c (scm_take_locale_stringn): Remove
	`SCM_C_INLINE_KEYWORD' to allow compilation with Sun CC.

2008-02-07  Julian Graham  <joolean@gmail.com>

	* throw.c (make_jmpbuf): Don't enter critical section during thread
	spawn -- there is a possibility of deadlock if other threads are
	exiting.
	
2008-02-06  Neil Jerram  <neil@ossau.uklinux.net>
